# learning_pkging

./: README.md  pyproject.toml
src/example_package_tonyjustdevs/: __version__.py  example.py
src/test_pkg_tonyjustdevs/: __init__.py  example.py
