
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_tonyjustdevs"
version = "0.0.2"
authors = [
  { name="Tony JustDevs", email="tonyjustdevs@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/pypa/sampleproject_tonyjustdevs"
Issues = "https://github.com/pypa/sampleproject_tonyjustdevs/issues"