
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_tonyjustdevs"
version = "0.0.4b2"
authors = [
  { name="Tony JustDevs", email="tonyjustdevs@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/tonyjustdevs/learning_pkging"
Issues = "https://github.com/tonyjustdevs/learning_pkging/issues"